# GauWN2D

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
cli/: CMakeLists.txt  cli_subcmd.ixx  entrypoint.cpp  main.ixx  spgrad.cxx  spgrad.ixx  value.cxx  value.ixx  veclocgrad.cxx  veclocgrad.ixx
cmake/: settings.cmake
src/: CMakeLists.txt
src/bvh2d/: CMakeLists.txt  aabb.ixx  approx_polygon.cxx  approx_polygon.ixx
src/io/: CMakeLists.txt  obj.cxx  obj.ixx  quadrature_rule.ixx  vtk.cxx  vtk.ixx
src/meshwise2d/: CMakeLists.txt  aabb.ixx
src/numerics/: CMakeLists.txt  gaussian.cxx  gaussian.ixx  gaussian_integrals.ixx
src/piecewise2d/: CMakeLists.txt  gradient.cxx  gradient.ixx  piecewise2d.ixx  value.cxx  value.ixx
src/utils/: CMakeLists.txt  grid2d.ixx  resumable.ixx  stdgenerator.ixx  topology.ixx  union_find.ixx  utils.ixx
vcpkg/: clang-toolchain.cmake  x64-linux-clang.cmake
